<resources>
    <string name="app_name">TodoListApp</string>
    <string name="login">Login</string>
    <string name="example">Example</string>
    <string name="delete">Delete</string>
    <string name="enter_your_todo_title">Enter your todo title</string>
    <string name="add">Add</string>
    <string name="lock_logo">Lock Logo</string>
    <string name="your_todo_app">Your Todo App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_with_phone">Register with Phone</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="logout">LogOut</string>
    <string name="have_account">Have account?</string>
    <string name="user_email">User Email:</string>
</resources>